完善 aside 切换逻辑 实现媒体查询

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "xue-vue3",
   "version": "0.0.0",
+  "license": "ISC",
+  "private": "true",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
